[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "innolab_package_Oleksandr_Makarevych"
version = "0.0.1"
authors = [
  { name="Oleksandr Makarevych", email="O.Makarevych@campus.lmu.de" },
]
description = "LMU Innolab package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/theYGE/InnoLab_Assignment.git"
"Bug Tracker" = "https://github.com/theYGE/InnoLab_Assignment.git/issues"